--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerZero</title>
   <link rel="icon" type="image/png" href="images/c5.png" />
-</head>
-
 
   <style>
     html, body {
@@ -24,65 +22,78 @@
       color: #fff;
     }
 
-    /* LOGO - 25% larger on both mobile & desktop */
-    .logo {
-      width: clamp(250px, 62.5vw, 500px);
-      height: auto;
-      margin-bottom: clamp(20px, 5vw, 40px);
+    /* Initial hidden state for all elements */
+    .tagline,
+    .logo,
+    .core-message {
       opacity: 0;
-      animation: fadeIn 2s forwards;
     }
 
-    .teaser {
-      font-size: clamp(1rem, 4vw, 1.5rem);
-      line-height: 1.4;
-      opacity: 0;
-      animation: fadeIn 2s 1.5s forwards;
-      margin: 0 clamp(10px, 5vw, 30px);
-    }
-
-    .coming-soon {
-      margin-top: clamp(12px, 3vw, 25px);
-      font-size: clamp(0.9rem, 2.5vw, 1.2rem);
-      color: #ccc;
-      opacity: 0;
-      animation: fadeIn 2s 3s forwards;
-    }
-
+    /* Fade in animation */
     @keyframes fadeIn {
       to {
         opacity: 1;
       }
     }
 
-    /* Desktop bump */
+    /* Fade out animation */
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+      }
+    }
+
+    /* Tagline animation: fade in, then fade out */
+    .tagline {
+      animation:
+        fadeIn 2s forwards,
+        fadeOut 2s 2.5s forwards;
+      font-size: clamp(1.2rem, 4vw, 2.5rem);
+      line-height: 1.4;
+      margin: 0 clamp(10px, 5vw, 40px);
+    }
+
+    /* Logo animation: fade in after tagline finishes */
+    .logo {
+      width: clamp(250px, 62.5vw, 500px);
+      height: auto;
+      margin-bottom: clamp(20px, 5vw, 40px);
+      animation: fadeIn 2s 5s forwards;
+    }
+
+    /* Core message (power words + teaser + coming soon) */
+    .core-message {
+      animation: fadeIn 2s 7s forwards;
+      max-width: 900px;
+      margin: 0 clamp(10px, 5vw, 40px);
+    }
+
+    .power-words {
+      font-size: clamp(1.2rem, 4vw, 2.5rem);
+      font-weight: bold;
+      margin: clamp(10px, 3vw, 20px) 0;
+      letter-spacing: 1px;
+    }
+
+    .teaser {
+      font-size: clamp(1rem, 3vw, 1.5rem);
+      line-height: 1.4;
+      margin: clamp(10px, 3vw, 30px) auto;
+      color: #ddd;
+    }
+
+    .coming-soon {
+      font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+      color: #ccc;
+      margin-top: clamp(12px, 3vw, 25px);
+    }
+
+    /* Larger sizes for desktop */
     @media (min-width: 1024px) {
       .logo {
         width: clamp(500px, 37.5vw, 875px);
         margin-bottom: clamp(40px, 5vw, 60px);
       }
 
-      .teaser {
-        font-size: clamp(1.5rem, 3vw, 2.5rem);
-      }
-
-      .coming-soon {
-        font-size: clamp(1.2rem, 2vw, 1.8rem);
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <img src="images/A6-PlayerZero.png" alt="PlayerZero Logo" class="logo" />
-
-  <div class="teaser">
-    It’s not what you’ve already accomplished…<br>
-    It’s what you’re about to…
-  </div>
-
-  <div class="coming-soon">
-    Coming soon...
-  </div>
-</body>
-</html>
+      .power-words {
+        font-size: clamp(
