--- a/index.html
+++ b/index.html
@@ -22,48 +22,22 @@
       color: #fff;
     }
 
-    /* Initial hidden state for all elements */
-    .tagline,
-    .logo,
-    .core-message {
-      opacity: 0;
-    }
-
-    /* Fade in animation */
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    /* Fade out animation */
-    @keyframes fadeOut {
-      to {
-        opacity: 0;
-      }
-    }
-
-    /* Tagline animation: fade in, then fade out */
     .tagline {
-      animation:
-        fadeIn 2s forwards,
-        fadeOut 2s 2.5s forwards;
+      opacity: 1;
       font-size: clamp(1.2rem, 4vw, 2.5rem);
       line-height: 1.4;
       margin: 0 clamp(10px, 5vw, 40px);
     }
 
-    /* Logo animation: fade in after tagline finishes */
     .logo {
       width: clamp(250px, 62.5vw, 500px);
       height: auto;
       margin-bottom: clamp(20px, 5vw, 40px);
-      animation: fadeIn 2s 5s forwards;
+      opacity: 1;
     }
 
-    /* Core message (power words + teaser + coming soon) */
     .core-message {
-      animation: fadeIn 2s 7s forwards;
+      opacity: 1;
       max-width: 900px;
       margin: 0 clamp(10px, 5vw, 40px);
     }
@@ -88,7 +62,6 @@
       margin-top: clamp(12px, 3vw, 25px);
     }
 
-    /* Larger sizes for desktop */
     @media (min-width: 1024px) {
       .logo {
         width: clamp(500px, 37.5vw, 875px);
@@ -96,4 +69,39 @@
       }
 
       .power-words {
-        font-size: clamp(
+        font-size: clamp(1.5rem, 3vw, 3rem);
+      }
+
+      .teaser {
+        font-size: clamp(1.2rem, 3vw, 2rem);
+      }
+
+      .coming-soon {
+        font-size: clamp(1.2rem, 2vw, 1.8rem);
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Tagline -->
+  <div class="tagline">
+    <div>It’s not what you’ve already accomplished…</div>
+    <div>It’s what you’re about to…</div>
+  </div>
+
+  <!-- Placeholder logo -->
+  <img src="https://via.placeholder.com/600x200/FFFFFF/000000?text=PlayerZero+Logo" alt="PlayerZero Logo" class="logo" />
+
+  <!-- Core message -->
+  <div class="core-message">
+    <div class="power-words">Track. Compete. Flex.</div>
+    <div class="teaser">
+      The must-have Pokémon GO companion for players who want to dive deeper into their stats, see how they stack up against the community, and flex their achievements.
+    </div>
+    <div class="coming-soon">
+      Coming soon...
+    </div>
+  </div>
+</body>
+</html>
