--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerZero</title>
-  <link rel="icon" type="image/png" href="images/c5.png" />
+  <link rel="icon" type="image/png" href="/images/c5.png" />
 
   <style>
     html, body {
@@ -32,76 +32,4 @@
     .logo {
       width: clamp(250px, 62.5vw, 500px);
       height: auto;
-      margin-bottom: clamp(20px, 5vw, 40px);
-      opacity: 1;
-    }
-
-    .core-message {
-      opacity: 1;
-      max-width: 900px;
-      margin: 0 clamp(10px, 5vw, 40px);
-    }
-
-    .power-words {
-      font-size: clamp(1.2rem, 4vw, 2.5rem);
-      font-weight: bold;
-      margin: clamp(10px, 3vw, 20px) 0;
-      letter-spacing: 1px;
-    }
-
-    .teaser {
-      font-size: clamp(1rem, 3vw, 1.5rem);
-      line-height: 1.4;
-      margin: clamp(10px, 3vw, 30px) auto;
-      color: #ddd;
-    }
-
-    .coming-soon {
-      font-size: clamp(0.9rem, 2.5vw, 1.2rem);
-      color: #ccc;
-      margin-top: clamp(12px, 3vw, 25px);
-    }
-
-    @media (min-width: 1024px) {
-      .logo {
-        width: clamp(500px, 37.5vw, 875px);
-        margin-bottom: clamp(40px, 5vw, 60px);
-      }
-
-      .power-words {
-        font-size: clamp(1.5rem, 3vw, 3rem);
-      }
-
-      .teaser {
-        font-size: clamp(1.2rem, 3vw, 2rem);
-      }
-
-      .coming-soon {
-        font-size: clamp(1.2rem, 2vw, 1.8rem);
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <!-- Tagline -->
-  <div class="tagline">
-    <div>It’s not what you’ve already accomplished…</div>
-    <div>It’s what you’re about to…</div>
-  </div>
-
-  <!-- Placeholder logo -->
-  <img src="https://via.placeholder.com/600x200/FFFFFF/000000?text=PlayerZero+Logo" alt="PlayerZero Logo" class="logo" />
-
-  <!-- Core message -->
-  <div class="core-message">
-    <div class="power-words">Track. Compete. Flex.</div>
-    <div class="teaser">
-      The must-have Pokémon GO companion for players who want to dive deeper into their stats, see how they stack up against the community, and flex their achievements.
-    </div>
-    <div class="coming-soon">
-      Coming soon...
-    </div>
-  </div>
-</body>
-</html>
+      margin-bottom: clamp(20p
