--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="core-message">
     <div class="power-words">Track. Compete. Flex.</div>
     <div class="teaser">
-      The must-have Pokémon GO companion for players who want to dive deeper into their stats, see how they stack up against the community, and flex their achievements.
+      The must-have companion app for Pokémon GO players who want to dive deeper into their stats, see how they stack up against the community, and flex their achievements.
     </div>
     <div class="coming-soon">Coming soon...</div>
   </div>
