--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerZero</title>
+  <link rel="icon" type="image/png" href="/images/c5.png" />
   <style>
     body {
       margin: 0;
