--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
       animation:
         fadeIn 2s forwards,
         fadeOut 2s 2.5s forwards;
-      font-size: clamp(1.2rem, 4vw, 2.5rem);
       margin-bottom: 30px;
+    }
+
+    .tagline .line-one {
+      font-size: clamp(1.2rem, 3vw, 2.2rem);
+      font-weight: 400;
+    }
+
+    .tagline .line-two {
+      font-size: clamp(1.5rem, 4vw, 2.8rem);
+      font-weight: 600;
+      margin-top: 10px;
     }
 
     .logo {
@@ -88,8 +98,8 @@
 </head>
 <body>
   <div class="tagline">
-    <div>It’s not what you’ve already accomplished…</div>
-    <div>It’s what you’re about to…</div>
+    <div class="line-one">It’s not what you’ve already accomplished…</div>
+    <div class="line-two">It’s what you’re about to…</div>
   </div>
 
   <img src="/images/A6-PlayerZero.png" alt="PlayerZero Logo" class="logo" />
