--- a/index.html
+++ b/index.html
@@ -86,49 +86,34 @@
       font-size: clamp(0.8rem, 1.8vw, 1.2rem);
     }
 
-    .waitlist {
+    .contact {
       margin-top: 30px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 12px;
+      gap: 16px;
       font-size: clamp(0.9rem, 1.8vw, 1.2rem);
     }
 
-    .waitlist label {
-      font-weight: 500;
+    .contact p {
+      margin: 0;
+      line-height: 1.4;
+      max-width: 600px;
     }
 
-    .waitlist form {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
+    .contact a {
+      color: #e30613;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .waitlist input[type="email"] {
-      padding: 8px 12px;
-      font-size: clamp(0.9rem, 1.2vw, 1rem);
-      border: 1px solid #444;
-      border-radius: 4px;
-      background: #111;
-      color: #fff;
-      width: clamp(200px, 40vw, 300px);
-    }
-
-    .waitlist button {
-      padding: 8px 16px;
-      font-size: clamp(0.9rem, 1.2vw, 1rem);
-      background: #e30613;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .waitlist button:hover {
-      background: #ff1a28;
+    .contact svg {
+      width: 20px;
+      height: 20px;
+      vertical-align: middle;
+      fill: #e30613;
     }
 
     @media (min-width: 1024px) {
@@ -162,12 +147,21 @@
     </div>
     <div class="coming-soon">Coming soon...</div>
 
-    <div class="waitlist">
-      <label for="email">Get early access to PlayerZero:</label>
-      <form>
-        <input type="email" id="email" placeholder="Your Email Address" required>
-        <button type="submit">Join The Waitlist</button>
-      </form>
+    <div class="contact">
+      <p>plyrZERO is in development — and we’re keeping it under wraps… for now.<br><br>
+      Curious to learn more? Connect with me directly:</p>
+      
+      <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240"><path d="M104.4 104.3c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.3-5 10.3-11.1.1-6.1-4.6-11.1-10.3-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.3-5 10.3-11.1 0-6.1-4.6-11.1-10.3-11.1z"/><path d="M189.5 20H55.1C38.8 20 25.8 32.7 25.8 48.6v142.7c0 15.9 13 28.6 29.3 28.6h106.7l-5-17.5 12 11.2 11.3 10.5 20.1 18.1V48.6c0-15.9-13-28.6-29.3-28.6z"/></svg>
+        plyrZERO_Official
+      </a>
+      
+      <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M512 256c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zm-89.7-52.5c-13.5-6-28.7-10-44.7-11.7l8.9-41.7c1.5-7-2.9-13.9-9.9-15.4-7-1.5-13.9 2.9-15.4 9.9l-9.2 43c-23.2.6-45 7-63.6 17.4-20.1-14.5-45.5-23-73.4-23s-53.3 8.5-73.4 23c-18.6-10.4-40.4-16.8-63.6-17.4l-9.2-43c-1.5-7-8.4-11.4-15.4-9.9-7 1.5-11.4 8.4-9.9 15.4l8.9 41.7c-16 1.8-31.2 5.8-44.7 11.7-6.7 3-9.6 10.8-6.5 17.5 3 6.7 10.8 9.6 17.5 6.5 32.5-14.7 76.2-15 113.5 11.7-14.5 13.8-23.3 32.7-23.3 53.8 0 45.2 46.1 81.8 102.9 81.8s102.9-36.6 102.9-81.8c0-21.1-8.8-40-23.3-53.8 37.3-26.7 81-26.3 113.5-11.7 6.7 3 14.5.2 17.5-6.5 3.1-6.7.2-14.5-6.5-17.5z"/></svg>
+        u/plyrZERO_Official
+      </a>
+
+      <p>Let’s talk — and you’ll be the first to know when we launch.</p>
     </div>
   </div>
 </body>
