--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerZero</title>
   <link rel="icon" type="image/png" href="/images/c5.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
       margin: 0;
@@ -107,13 +108,15 @@
       display: inline-flex;
       align-items: center;
       gap: 8px;
+      font-weight: bold;
     }
 
-    .contact svg {
-      width: 20px;
-      height: 20px;
-      vertical-align: middle;
-      fill: #e30613;
+    .contact a:hover {
+      color: #ff1a28;
+    }
+
+    .contact i {
+      font-size: 1.5em;
     }
 
     @media (min-width: 1024px) {
@@ -152,13 +155,11 @@
       Curious to learn more? Connect with me directly:</p>
       
       <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240"><path d="M104.4 104.3c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.3-5 10.3-11.1.1-6.1-4.6-11.1-10.3-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.3-5 10.3-11.1 0-6.1-4.6-11.1-10.3-11.1z"/><path d="M189.5 20H55.1C38.8 20 25.8 32.7 25.8 48.6v142.7c0 15.9 13 28.6 29.3 28.6h106.7l-5-17.5 12 11.2 11.3 10.5 20.1 18.1V48.6c0-15.9-13-28.6-29.3-28.6z"/></svg>
-        plyrZERO_Official
+        <i class="fa-brands fa-discord"></i> plyrZERO_Official
       </a>
       
       <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M512 256c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zm-89.7-52.5c-13.5-6-28.7-10-44.7-11.7l8.9-41.7c1.5-7-2.9-13.9-9.9-15.4-7-1.5-13.9 2.9-15.4 9.9l-9.2 43c-23.2.6-45 7-63.6 17.4-20.1-14.5-45.5-23-73.4-23s-53.3 8.5-73.4 23c-18.6-10.4-40.4-16.8-63.6-17.4l-9.2-43c-1.5-7-8.4-11.4-15.4-9.9-7 1.5-11.4 8.4-9.9 15.4l8.9 41.7c-16 1.8-31.2 5.8-44.7 11.7-6.7 3-9.6 10.8-6.5 17.5 3 6.7 10.8 9.6 17.5 6.5 32.5-14.7 76.2-15 113.5 11.7-14.5 13.8-23.3 32.7-23.3 53.8 0 45.2 46.1 81.8 102.9 81.8s102.9-36.6 102.9-81.8c0-21.1-8.8-40-23.3-53.8 37.3-26.7 81-26.3 113.5-11.7 6.7 3 14.5.2 17.5-6.5 3.1-6.7.2-14.5-6.5-17.5z"/></svg>
-        u/plyrZERO_Official
+        <i class="fa-brands fa-reddit"></i> u/plyrZERO_Official
       </a>
 
       <p>Let’s talk — and you’ll be the first to know when we launch.</p>
