--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
       
       <div class="social-links">
         <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;">
-          <i class="fa-brands fa-discord"></i> <span>plyrZERO_Official</span>
+          <i class="fa-brands fa-discord"></i>
         </a>
         <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank">
-          <i class="fa-brands fa-reddit"></i> <span>u/plyrZERO_Official</span>
+          <i class="fa-brands fa-reddit"></i>
         </a>
       </div>
     </div>
