--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
     .social-links a i {
       color: #e30613;
       font-size: 1.2em;
+      transition: color 0.3s;
+    }
+
+    .social-links a:hover i {
+      color: #ff1a28;
     }
 
     .social-links a span {
@@ -168,11 +173,14 @@
       <p>Curious to learn more or be the first to know when we launch? Connect with me directly:</p>
       
       <div class="social-links">
-        <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;">
+        <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;" title="Discord">
           <i class="fa-brands fa-discord"></i>
         </a>
-        <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank">
+        <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank" title="Reddit">
           <i class="fa-brands fa-reddit"></i>
+        </a>
+        <a href="mailto:official@plyrzero.com" title="Email">
+          <i class="fa-solid fa-envelope"></i>
         </a>
       </div>
     </div>
