--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="coming-soon">Coming soon...</div>
 
     <div class="contact">
-      <p>Curious to learn more or be the first to know when we launch? Connect with me directly:</p>
+      <p>Curious to learn more or be the first to know when we launch? Connect with us directly:</p>
       
       <div class="social-links">
         <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;" title="Discord">
