--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <p>Curious to learn more or be the first to know when we launch? Connect with us directly:</p>
       
       <div class="social-links">
-        <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle copied to clipboard!'); return false;" title="Discord">
+        <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle plyrZERO_Official has been copied!'); return false;" title="Discord">
           <i class="fa-brands fa-discord"></i>
         </a>
         <a href="https://www.reddit.com/user/plyrZERO_Official" target="_blank" title="Reddit">
