--- a/index.html
+++ b/index.html
@@ -7,150 +7,66 @@
   <link rel="icon" type="image/png" href="/images/c5.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    :root { --pz-red:#e30613; }
     body {
       margin: 0;
       background: linear-gradient(to bottom, #000000, #222222);
       color: #fff;
       text-align: center;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      padding: 20px;
+      font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+      min-height: 100vh; padding: 20px;
     }
-
-    .tagline,
-    .logo,
-    .core-message {
-      opacity: 0;
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; }
-    }
+    .tagline, .logo, .core-message { opacity: 0; }
+    @keyframes fadeIn { to { opacity: 1; } }
+    @keyframes fadeOut { to { opacity: 0; } }
 
     .tagline {
-      animation:
-        fadeIn 2s forwards,
-        fadeOut 2s 2.5s forwards;
+      animation: fadeIn 2s forwards, fadeOut 2s 2.5s forwards;
       margin-bottom: 30px;
     }
+    .tagline .line-one { font-size: clamp(1.2rem, 3vw, 2.2rem); font-weight: 400; }
+    .tagline .line-two { font-size: clamp(1.5rem, 4vw, 2.8rem); font-weight: 600; margin-top: 10px; }
 
-    .tagline .line-one {
-      font-size: clamp(1.2rem, 3vw, 2.2rem);
-      font-weight: 400;
+    .logo { width: clamp(250px, 62.5vw, 500px); height: auto; margin-bottom: 30px; animation: fadeIn 2s 5s forwards; }
+    .core-message { animation: fadeIn 2s 7s forwards; max-width: 800px; }
+    .power-words { font-size: clamp(1.2rem, 4vw, 2.5rem); font-weight: 800; margin: 20px 0; }
+    .teaser { font-size: clamp(0.9rem, 2vw, 1.2rem); color: #ddd; margin: 20px; }
+    .highlight { color: var(--pz-red); }
+    .coming-soon { color: #ccc; margin-top: 20px; font-size: clamp(0.8rem, 1.8vw, 1.1rem); }
+
+    .contact { margin-top: 30px; display: flex; flex-direction: column; align-items: center; gap: 16px; font-size: clamp(0.8rem, 1.2vw, 1.1rem); }
+    .social-links { display: flex; gap: 30px; align-items: center; flex-wrap: wrap; justify-content: center; }
+    .social-links a { color: #fff; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; font-size: clamp(0.8rem, 1.2vw, 1.1rem); }
+    .social-links a i { color: var(--pz-red); font-size: 1.2em; transition: color .3s; }
+    .social-links a:hover i { color: #ff1a28; }
+    .social-links a:hover span { color: #ff1a28; }
+
+    /* Summit CTA + results */
+    .cta { margin-top: 28px; display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+    .btn {
+      padding: 12px 18px; border: 0; border-radius: 10px; font-weight: 800; cursor: pointer;
+      background: var(--pz-red); color: #fff;
     }
+    .btn.secondary { background:#2b2b2b; color:#fff; border:1px solid #444; }
 
-    .tagline .line-two {
-      font-size: clamp(1.5rem, 4vw, 2.8rem);
-      font-weight: 600;
-      margin-top: 10px;
+    dialog#summitDialog { padding:0; border:0; border-radius:16px; max-width:520px; width:92%; }
+    dialog::backdrop { background: rgba(0,0,0,.6); }
+    #summitForm { background:#111; color:#fff; padding:24px; border-radius:16px; text-align:left; }
+    #summitForm label { display:block; margin:12px 0 6px; font-weight:600; }
+    #summitForm input {
+      width:100%; padding:10px; border-radius:10px; border:1px solid #333; background:#1a1a1a; color:#fff;
     }
+    #calcNote { display:none; margin-top:12px; font-size:.9rem; color:#bbb; }
 
-    .logo {
-      width: clamp(250px, 62.5vw, 500px);
-      height: auto;
-      margin-bottom: 30px;
-      animation: fadeIn 2s 5s forwards;
-    }
+    #cardWrap { margin-top:26px; display:none; flex-direction:column; align-items:center; gap:10px }
+    #summitCard { max-width:840px; width:100%; height:auto; border-radius:18px; }
 
-    .core-message {
-      animation: fadeIn 2s 7s forwards;
-      max-width: 800px;
-    }
-
-    .power-words {
-      font-size: clamp(1.2rem, 4vw, 2.5rem);
-      font-weight: bold;
-      margin: 20px 0;
-    }
-
-    .teaser {
-      font-size: clamp(0.9rem, 2vw, 1.2rem);
-      color: #ddd;
-      margin: 20px;
-    }
-
-    .highlight {
-      color: #e30613;
-    }
-
-    .coming-soon {
-      color: #ccc;
-      margin-top: 20px;
-      font-size: clamp(0.8rem, 1.8vw, 1.1rem);
-    }
-
-    .contact {
-      margin-top: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 16px;
-      font-size: clamp(0.8rem, 1.2vw, 1.1rem);
-    }
-
-    .contact p {
-      margin: 0;
-      color: #fff;
-      text-align: center;
-    }
-
-    .social-links {
-      display: flex;
-      gap: 30px;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .social-links a {
-      color: #fff;
-      text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      font-weight: normal;
-      font-size: clamp(0.8rem, 1.2vw, 1.1rem);
-    }
-
-    .social-links a i {
-      color: #e30613;
-      font-size: 1.2em;
-      transition: color 0.3s;
-    }
-
-    .social-links a:hover i {
-      color: #ff1a28;
-    }
-
-    .social-links a span {
-      color: #fff;
-    }
-
-    .social-links a:hover span {
-      color: #ff1a28;
-    }
-
-    @media (min-width: 1024px) {
-      .logo {
-        width: clamp(500px, 37.5vw, 875px);
-      }
-      .power-words {
-        font-size: clamp(1.5rem, 3vw, 3rem);
-      }
-      .teaser {
-        font-size: clamp(0.9rem, 1.5vw, 1.2rem);
-      }
-      .coming-soon {
-        font-size: clamp(0.8rem, 1.2vw, 1.1rem);
-      }
+    @media (min-width:1024px){
+      .logo { width: clamp(500px, 37.5vw, 875px); }
+      .power-words { font-size: clamp(1.5rem, 3vw, 3rem); }
+      .teaser { font-size: clamp(0.9rem, 1.5vw, 1.2rem); }
+      .coming-soon { font-size: clamp(0.8rem, 1.2vw, 1.1rem); }
     }
   </style>
 </head>
@@ -171,7 +87,6 @@
 
     <div class="contact">
       <p>Curious to learn more or be the first to know when we launch? Connect with us directly:</p>
-      
       <div class="social-links">
         <a href="#" onclick="navigator.clipboard.writeText('plyrZERO_Official'); alert('Discord handle plyrZERO_Official has been copied!'); return false;" title="Discord">
           <i class="fa-brands fa-discord"></i>
@@ -183,7 +98,81 @@
           <i class="fa-solid fa-envelope"></i>
         </a>
       </div>
+
+      <!-- Summit button(s) -->
+      <div class="cta">
+        <button id="openSummit" class="btn">Want to know your Summit date?</button>
+        <a class="btn secondary" href="https://plyrzero.com" target="_blank" rel="noopener">plyrzero.com</a>
+      </div>
     </div>
   </div>
-</body>
-</html>
+
+  <!-- Modal -->
+  <dialog id="summitDialog">
+    <form method="dialog" id="summitForm">
+      <h3 style="margin:0 0 8px">Summit Date Calculator</h3>
+      <p style="margin:0 0 12px;color:#ccc">Enter your Trainer Name, total XP, and the date you started playing.</p>
+
+      <label>Trainer Name</label>
+      <input id="nameInput" placeholder="e.g., LumbrJackson" required>
+
+      <label>Total XP</label>
+      <input id="xpInput" inputmode="numeric" placeholder="e.g., 74,143,916" required>
+
+      <label>Start Date</label>
+      <input id="startInput" type="date" required>
+
+      <div style="display:flex;gap:10px;justify-content:flex-end;margin-top:18px">
+        <button value="cancel" class="btn secondary">Cancel</button>
+        <button id="calcBtn" value="default" class="btn">Submit</button>
+      </div>
+
+      <p id="calcNote"></p>
+    </form>
+  </dialog>
+
+  <!-- Rendered result -->
+  <div id="cardWrap">
+    <canvas id="summitCard"></canvas>
+    <a id="dlCard" download="playerzero-summit-card.png" class="btn secondary">Download Card</a>
+  </div>
+
+  <script>
+    // ========= CONFIG =========
+    // Use same-origin URLs to avoid a "tainted" canvas.
+    const SUMMIT_XP = 176_000_000;
+    const BASE_CARD_SRC = "/images/summit_base.png";     // blue card (750x1050)
+    const ACHIEVED_CARD_SRC = "/images/summit_achieved.png"; // gold ACHIEVED card (750x1050)
+
+    // ========= UI HOOKS =========
+    const openBtn = document.getElementById("openSummit");
+    const dlg = document.getElementById("summitDialog");
+    const form = document.getElementById("summitForm");
+    const nameInput = document.getElementById("nameInput");
+    const xpInput = document.getElementById("xpInput");
+    const startInput = document.getElementById("startInput");
+    const note = document.getElementById("calcNote");
+    const wrap = document.getElementById("cardWrap");
+    const canvas = document.getElementById("summitCard");
+    const dl = document.getElementById("dlCard");
+
+    openBtn.addEventListener("click", () => {
+      note.style.display = "none";
+      dlg.showModal();
+    });
+
+    // ========= HELPERS =========
+    const parseXP = (s) => Number(String(s || "").replace(/[^0-9.]/g, "")) || 0;
+    const fmtXP = (n) => n.toLocaleString(undefined, { maximumFractionDigits: 0 });
+    const fmtDateMDY = (d) => {
+      const mm = String(d.getMonth()+1).padStart(2,"0");
+      const dd = String(d.getDate()).padStart(2,"0");
+      const yyyy = d.getFullYear();
+      return `${mm}.${dd}.${yyyy}`;
+    };
+    const daysBetween = (a, b) => Math.max(1, Math.floor((b - a) / 86400000));
+
+    function calcProjection(xp, startDate) {
+      const today = new Date();
+      if (startDate > today) throw new Error("Start date cannot be in the future.");
+      const daysElapsed = daysBetw
