--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- CTA moved up; text updated -->
     <div class="cta">
-      <button id="openSummit" type="button" class="btn">Join the first 100</button>
+      <button id="openSummit" type="button" class="btn">Apply to join the First 100</button>
     </div>
 
     <div class="contact">
