--- a/first100.html
+++ b/first100.html
@@ -4,51 +4,125 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PlayerZero</title>
+
   <link rel="icon" type="image/png" href="/images/c5.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
   <style>
     :root { --pz-red:#e30613; }
+
     body {
       margin: 0;
       background: linear-gradient(to bottom, #000000, #222222);
       color: #fff;
       text-align: center;
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      min-height: 100vh; padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 20px;
     }
+
     .tagline, .logo, .core-message { opacity: 0; }
     @keyframes fadeIn { to { opacity: 1; } }
     @keyframes fadeOut { to { opacity: 0; } }
-    .tagline { animation: fadeIn 2s forwards, fadeOut 2s 2.5s forwards; margin-bottom: 30px; pointer-events:none; }
-    .tagline .line-one { font-size: clamp(1.2rem, 3vw, 2.2rem); font-weight: 400; }
-    .tagline .line-two { font-size: clamp(1.5rem, 4vw, 2.8rem); font-weight: 600; margin-top: 10px; }
 
-    .logo { width: clamp(250px, 62.5vw, 500px); height: auto; margin-bottom: 30px; animation: fadeIn 2s 5s forwards; }
-    .core-message { animation: fadeIn 2s 7s forwards; max-width: 800px; }
-    .power-words { font-size: clamp(1.2rem, 4vw, 2.5rem); font-weight: 800; margin: 20px 0; }
-    .teaser { font-size: clamp(0.9rem, 2vw, 1.2rem); color: #ddd; margin: 20px; }
+    .tagline {
+      animation: fadeIn 2s forwards, fadeOut 2s 2.5s forwards;
+      margin-bottom: 30px;
+      pointer-events:none;
+    }
+
+    .tagline .line-one {
+      font-size: clamp(1.2rem, 3vw, 2.2rem);
+      font-weight: 400;
+    }
+
+    .tagline .line-two {
+      font-size: clamp(1.5rem, 4vw, 2.8rem);
+      font-weight: 600;
+      margin-top: 10px;
+    }
+
+    .logo {
+      width: clamp(250px, 62.5vw, 500px);
+      height: auto;
+      margin-bottom: 30px;
+      animation: fadeIn 2s 5s forwards;
+    }
+
+    .core-message {
+      animation: fadeIn 2s 7s forwards;
+      max-width: 800px;
+    }
+
+    .power-words {
+      font-size: clamp(1.2rem, 4vw, 2.5rem);
+      font-weight: 800;
+      margin: 20px 0;
+    }
+
+    .teaser {
+      font-size: clamp(0.9rem, 2vw, 1.2rem);
+      color: #ddd;
+      margin: 20px;
+    }
+
     .highlight { color: var(--pz-red); }
 
-    .contact { margin-top: 30px; display: flex; flex-direction: column; align-items: center; gap: 16px; font-size: clamp(0.8rem, 1.2vw, 1.1rem); }
-    .social-links { display: flex; gap: 30px; align-items: center; flex-wrap: wrap; justify-content: center; }
-    .social-links a { color: #fff; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; font-size: clamp(0.8rem, 1.2vw, 1.1rem); }
-    .social-links a i { color: var(--pz-red); font-size: 1.2em; transition: color .3s; }
+    .cta {
+      margin-top: 24px;
+      display:flex;
+      justify-content:center;
+    }
+
+    .btn {
+      padding: 12px 18px;
+      border: 0;
+      border-radius: 10px;
+      font-weight: 800;
+      cursor: pointer;
+      background: var(--pz-red);
+      color: #fff;
+      text-decoration:none;
+      display:inline-block;
+    }
+
+    .contact {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      font-size: clamp(0.8rem, 1.2vw, 1.1rem);
+    }
+
+    .social-links {
+      display: flex;
+      gap: 30px;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .social-links a {
+      color: #fff;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-size: clamp(0.8rem, 1.2vw, 1.1rem);
+    }
+
+    .social-links a i {
+      color: var(--pz-red);
+      font-size: 1.2em;
+      transition: color .3s;
+    }
+
     .social-links a:hover i { color: #ff1a28; }
-
-    .cta { margin-top: 24px; display:flex; justify-content:center; }
-    .btn { padding: 12px 18px; border: 0; border-radius: 10px; font-weight: 800; cursor: pointer; background: var(--pz-red); color: #fff; position: relative; z-index: 1; text-decoration:none; display:inline-block; }
-
-    /* Modal + card styles remain in case you reuse later */
-    dialog#summitDialog { padding:0; border:0; border-radius:16px; max-width:520px; width:92%; }
-    dialog::backdrop { background: rgba(0,0,0,.6); }
-    #summitForm { background:#111; color:#fff; padding:24px; border-radius:16px; text-align:left; }
-    #summitForm label { display:block; margin:12px 0 6px; font-weight:600; }
-    #summitForm input { width:100%; padding:10px; border-radius:10px; border:1px solid #333; background:#1a1a1a; color:#fff; }
-    #calcNote { display:none; margin-top:12px; font-size:.9rem; color:#bbb; }
-
-    #cardWrap { margin-top:26px; display:none; flex-direction:column; align-items:center; gap:10px }
-    #summitCard { width: clamp(320px, 70vw, 520px); height:auto; border-radius:18px; }
 
     .disclaimer {
       margin-top: 18px;
@@ -57,6 +131,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="tagline">
     <div class="line-one">It’s not what you’ve already accomplished…</div>
@@ -75,9 +150,10 @@
       <strong>complimentary first year</strong>, and <strong>priority access to affiliate opportunities</strong>.
     </div>
 
-    <!-- Updated CTA -->
     <div class="cta">
-      <a href="https://first100application.plyrzero.com" class="btn">Apply to join the First 100</a>
+      <a href="https://first100application.plyrzero.com" class="btn">
+        Apply to join the First 100
+      </a>
     </div>
 
     <div class="contact">
@@ -97,20 +173,5 @@
     </p>
   </div>
 
-  <!-- We leave modal/card code here in case you reuse it later, but it's not active -->
-  <dialog id="summitDialog">
-    <form method="dialog" id="summitForm">
-      <h3 style="margin:0 0 8px">Summit Date Calculator</h3>
-      <p style="margin:0 0 12px;color:#ccc">Enter your Trainer Name, total XP, and the date you started playing.</p>
-
-      <label>Trainer Name</label>
-      <input id="nameInput" placeholder="e.g., LumbrJackson" required>
-
-      <label>Total XP</label>
-      <input id="xpInput" inputmode="numeric" placeholder="e.g., 74,143,916" required>
-
-      <label>Start Date</label>
-      <input id="startInput" type="date" required>
-
-      <div style="display:flex;gap:10px;justify-content:flex-end;margin-top:18px">
-        <button value="cancel" type="button" onclick="document.getEleme
+</body>
+</html>
