Update link text to include 'Bitches'

--- a/first100.html
+++ b/first100.html
@@ -162,7 +162,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        Apply to join the First 100
+        Apply to join the First 100 Bitches
       </a>
 
       <!-- Plain text backup link -->
