--- a/first100.html
+++ b/first100.html
@@ -162,7 +162,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        Apply to join the First 100 Bitches
+        Apply to join the First 100
       </a>
 
       <!-- Plain text backup link -->
