Update signup link to direct to signup page

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
 
     <div class="cta">
-      <a href="https://plyrzero.com" class="btn">Sign up for PlayerZERO</a>
+      <a href="https://plyrzero.com/signup" class="btn">Sign up for PlayerZERO</a>
     </div>
 
     <div class="contact">
